syntax = "proto3";

package nvd.codes.v1.blog;

import "google/protobuf/empty.proto";

message Post {
    string id = 1;
    string title = 2;
    string description = 4;
    string date = 5;
    bool draft = 6;
    string content = 7;
    repeated string categories = 8;
    string slug = 9;
    string reading_time = 10;
    string cover = 11;
    map<string, string> placeholder_css = 12;
    string placeholder = 13;
    string edit_url = 14;
}

message GetPostBySlugRequest {
    string slug = 1;
}

message ListPostsRequest {
    int32 page = 1;
    int32 count = 2;
}

message ListPostsResponse {
    repeated Post posts = 1;
    int32 current_page = 2;
    int32 total_pages = 3;
}

service Blog {
    rpc GetPostBySlug(GetPostBySlugRequest) returns (Post) {};
    rpc ListAllPosts(google.protobuf.Empty) returns (stream Post) {};
    rpc ListPosts(ListPostsRequest) returns (ListPostsResponse) {};
}
